--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Janmamitra</title>
+    <title>Janmamithra</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -15,10 +15,10 @@
         <nav>
             <ul>
                 <li><a href="home.html">Home</a></li>
-                <li><a href="achievers.html">Achievers</a></li>
+                <li><a href="honors.html">Achievers</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="joined.html">Joined</a></li>
-                <li><a href="donate.html" class="donate">Donate</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="events.html">Events</a></li>
             </ul>
         </nav>
     </header>
@@ -29,33 +29,41 @@
             <h1>We Help Poor</h1>
             <p>Add a little bit of body text</p>
             <div class="buttons">
-                <a href="projects.html" class="btn">Projects</a>
-                <a href="events.html" class="btn">Events</a>
+                <a href="join.html" class="btn">Join</a>
+                <li><a href="donates.html" class="donate">Donates</a></li>
             </div>
         </div>
+
+        <!-- About Us Section -->
+        <section class="about-us">
+            <h2>About Us</h2>
+            <p>Janmamithra Trust, established in 2015, inspires youth to share and care for society. With 250+ volunteers in Bengaluru, it has organized 200+ events, including child sponsorships, school adoptions, and monthly meals for the needy. The self-funded Trust now seeks volunteers to help secure organized donations.</p>
+        </section>
 
         <!-- Vision and Mission Section -->
         <section class="vision-mission">
             <div class="vision">
                 <img src="vision.jpg" alt="Vision">
                 <h2>Our Vision</h2>
-                <p>To build a world where kindness and opportunities help everyone live their best life.</p>
+                <p>To have a world where happiness thrives!</p>
             </div>
             <div class="mission">
                 <img src="mission.jpg" alt="Mission">
                 <h2>Our Mission</h2>
-                <p>To help build self-reliant communities with the dedicated efforts and active involvement of socially driven youth."</p>
+                <p>Being constant support to help build a self-reliant community through selfless contribution and participation by youth, who desire social welfare.</p>
             </div>
         </section>
 
-        <section class="about-us">
-            <h2>About Us</h2>
-            <p>Janmamithra Trust, established in October 2015, encourages youth to share and care for society. Starting with scribing for visually impaired students, Sharath expanded his efforts, leading to the Trust’s formation. 
-        With 250+ volunteers in Bengaluru, the Trust has organized 200+ events, including child sponsorships, school adoptions, HIV support, organ donation drives, and monthly meals for the needy. Self-funded to date, the Trust seeks volunteers to help organize donations and expand its impact..</p>
+        <!-- Contact Section -->
+        <section class="contact">
+            <h2>Contact Us</h2>
+            <div class="contact-info">
+                <p><strong>📞 Mobile:</strong> 9611047143</p>
+                <p><strong>✉️ Email:</strong> janmamithra@gmail.com</p>
+                <p><strong>📍 Address:</strong> Nagarbhavi, Bangalore</p>
+            </div>
         </section>
     </main>
-
- 
 
     <script src="script.js"></script>
 </body>
