--- a/home.html
+++ b/home.html
@@ -26,11 +26,11 @@
     <!-- Hero Section -->
     <main>
         <div class="hero" style="background-image: url('homebackground.jpg');">
-            <h1>We Help Poor</h1>
-            <p>Add a little bit of body text</p>
+            <h1>Together</h1>
+            <p>we turn struggles into strength</p>
             <div class="buttons">
                 <a href="join.html" class="btn">Join</a>
-                <li><a href="donates.html" class="donate">Donates</a></li>
+                <a href="donates.html" class="donate">Donates</a>
             </div>
         </div>
 
