--- a/home.html
+++ b/home.html
@@ -59,8 +59,20 @@
             <h2>Contact Us</h2>
             <div class="contact-info">
                 <p><strong>📞 Mobile:</strong> 9611047143</p>
-                <p><strong>✉️ Email:</strong> janmamithra@gmail.com</p>
+                <p><strong>✉ Email:</strong> janmamithra@gmail.com</p>
                 <p><strong>📍 Address:</strong> Nagarbhavi, Bangalore</p>
+            </div>
+        </section>
+
+        <!-- Social Media Section -->
+        <section class="social-media">
+            <h2>Explore</h2>
+            <div class="social-icons">
+                <a href="https://www.instagram.com/janmamithra_trust_regd/" target="_blank" class="icon instagram"></a>
+                <a href="https://x.com/intent/post?text=Home+-+https%3A%2F%2Fjanmamithra.org%2F+" target="_blank" class="icon twitter"></a>
+                <a href="https://www.facebook.com/share.php?u=https://janmamithra.org/" target="_blank" class="icon facebook"></a>
+                <a href="https://www.pinterest.com/pin/create/button/?url=https://janmamithra.org/&media=&description=" target="_blank" class="icon pinterest"></a>
+                <a href="https://www.youtube.com/channel/UC_cz7USjfaLgRp7EZA2DaXw" target="_blank" class="icon youtube"></a>
             </div>
         </section>
     </main>
