--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Header Section -->
+   <!-- Header Section -->
     <header>
         <div class="logo">
             <img src="Logo.png" alt="Logo">
         </div>
         <nav>
             <ul>
-                <li><a href="home.html">Home</a></li>
-                <li><a href="honors.html">Achievers</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="events.html">Events</a></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#honors">Achievers</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#events" class="highlighted">Events</a></li>
             </ul>
         </nav>
     </header>
@@ -40,29 +40,43 @@
             <p>Janmamithra Trust, established in 2015, inspires youth to share and care for society. With 250+ volunteers in Bengaluru, it has organized 200+ events, including child sponsorships, school adoptions, and monthly meals for the needy. The self-funded Trust now seeks volunteers to help secure organized donations.</p>
         </section>
 
-        <!-- Vision and Mission Section -->
-        <section class="vision-mission">
+       <!-- Vision and Mission Section -->
+        <section class="vision-mission" >
             <div class="vision">
-                <img src="vision.jpg" alt="Vision">
-                <h2>Our Vision</h2>
-                <p>To have a world where happiness thrives!</p>
+                <div class="image-container">
+                    <img src="vision.jpg" alt="Vision">
+                    <div class="overlay">
+                        <h2>Our Vision</h2>
+                        <p>To have a world where happiness thrives!</p>
+                    </div>
+                </div>
             </div>
             <div class="mission">
-                <img src="mission.jpg" alt="Mission">
-                <h2>Our Mission</h2>
-                <p>Being constant support to help build a self-reliant community through selfless contribution and participation by youth, who desire social welfare.</p>
+                <div class="image-container">
+                    <img src="mission.jpg" alt="Mission">
+                    <div class="overlay">
+                        <h2>Our Mission</h2>
+                        <p>Being constant support to help build a self-reliant community, through selfless contribution and participation by youth, who desire social welfare.</p>
+                    </div>
+                </div>
             </div>
         </section>
 
         <!-- Contact Section -->
-        <section class="contact">
-            <h2>Contact Us</h2>
-            <div class="contact-info">
-                <p><strong>📞 Mobile:</strong> 9611047143</p>
-                <p><strong>✉ Email:</strong> janmamithra@gmail.com</p>
-                <p><strong>📍 Address:</strong> Nagarbhavi, Bangalore</p>
-            </div>
-        </section>
+         <section class="contact-info"id="contact">
+        <div>
+            <h3>Contact Us</h3>
+            <p>
+                📞 <a href="tel:9611047143" style="text-decoration: none; color: blue;">Mobile: 9611047143</a>
+            </p>
+            <p>
+                ✉️ <a href="mailto:janmamithra@gmail.com" style="text-decoration: none; color: blue;">Email: janmamithra@gmail.com</a>
+            </p>
+            <p>
+                📍 <a href="https://www.google.com/maps?q=Nagarbhavi,+Bangalore" target="_blank" style="text-decoration: none; color: blue;">Address: Nagarbhavi, Bangalore</a>
+            </p>
+        </div>
+    </section>
 
         <!-- Social Media Section -->
         <section class="social-media">
