--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-   <!-- Header Section -->
+    <!-- Header Section -->
     <header>
         <div class="logo">
             <img src="Logo.png" alt="Logo">
@@ -30,17 +30,17 @@
             <p>we turn struggles into strength</p>
             <div class="buttons">
                 <a href="join.html" class="btn">Join</a>
-                <a href="donates.html" class="donate">Donates</a>
+                <a href="donates.html" class="btn">Donate</a>
             </div>
         </div>
 
         <!-- About Us Section -->
-        <section class="about-us">
+        <section class="about-us" id ="home">
             <h2>About Us</h2>
             <p>Janmamithra Trust, established in 2015, inspires youth to share and care for society. With 250+ volunteers in Bengaluru, it has organized 200+ events, including child sponsorships, school adoptions, and monthly meals for the needy. The self-funded Trust now seeks volunteers to help secure organized donations.</p>
         </section>
 
-       <!-- Vision and Mission Section -->
+        <!-- Vision and Mission Section -->
         <section class="vision-mission" >
             <div class="vision">
                 <div class="image-container">
@@ -77,7 +77,6 @@
             </p>
         </div>
     </section>
-
         <!-- Social Media Section -->
         <section class="social-media">
             <h2>Explore</h2>
