--- a/index.html
+++ b/index.html
@@ -77,19 +77,17 @@
             </p>
         </div>
     </section>
-        <!-- Social Media Section -->
-        <section class="social-media">
-            <h2>Explore</h2>
-            <div class="social-icons">
-                <a href="https://www.instagram.com/janmamithra_trust_regd/" target="_blank" class="icon instagram"></a>
-                <a href="https://x.com/intent/post?text=Home+-+https%3A%2F%2Fjanmamithra.org%2F+" target="_blank" class="icon twitter"></a>
-                <a href="https://www.facebook.com/share.php?u=https://janmamithra.org/" target="_blank" class="icon facebook"></a>
-                <a href="https://www.pinterest.com/pin/create/button/?url=https://janmamithra.org/&media=&description=" target="_blank" class="icon pinterest"></a>
-                <a href="https://www.youtube.com/channel/UC_cz7USjfaLgRp7EZA2DaXw" target="_blank" class="icon youtube"></a>
-            </div>
-        </section>
+    <!-- Social Media Section -->
+    <section class="social-media">
+        <h2>Explore</h2>
+        <div class="social-icons">
+            <a href="https://www.instagram.com/janmamithra_trust_regd/" target="_blank" class="icon instagram"><img src="instagram.png" alt=Instagram></a>
+            <a href="https://x.com/intent/post?text=Home+-+https%3A%2F%2Fjanmamithra.org%2F+" target="_blank" class="icon twitter"><img src="twitter.png" alt=Twitter></a>
+            <a href="https://www.facebook.com/share.php?u=https://janmamithra.org/" target="_blank" class="icon facebook"><img src="facebook.png" alt=Facebook></a>
+            <a href="https://www.pinterest.com/pin/create/button/?url=https://janmamithra.org/&media=&description=" target="_blank" class="icon pinterest"><img src="pinterest.png" alt=Pinterest></a>
+            <a href="https://www.youtube.com/channel/UC_cz7USjfaLgRp7EZA2DaXw" target="_blank" class="icon youtube"><img src="youtube.png" alt=Youtube></a>
+        </div>
+    </section>
     </main>
-
-    <script src="script.js"></script>
 </body>
 </html>
