--- a/index.html
+++ b/index.html
@@ -63,20 +63,15 @@
         </section>
 
         <!-- Contact Section -->
-         <section class="contact-info"id="contact">
-        <div>
-            <h3>Contact Us</h3>
-            <p>
-                📞 <a href="tel:9611047143" style="text-decoration: none; color: blue;">Mobile: 9611047143</a>
-            </p>
-            <p>
-                ✉️ <a href="mailto:janmamithra@gmail.com" style="text-decoration: none; color: blue;">Email: janmamithra@gmail.com</a>
-            </p>
-            <p>
-                📍 <a href="https://www.google.com/maps?q=Nagarbhavi,+Bangalore" target="_blank" style="text-decoration: none; color: blue;">Address: Nagarbhavi, Bangalore</a>
-            </p>
-        </div>
-    </section>
+<section class="contact-info" id="contact">
+    <div>
+        <h2>Contact Us</h2>
+        <p>📞 Mobile: 9611047143</p>
+        <p>✉️ Email: janmamithra@gmail.com</p>
+        <p>📍 Address: Nagarbhavi, Bangalore</p>
+    </div>
+</section>
+
     <!-- Social Media Section -->
     <section class="social-media">
         <h2>Explore</h2>
