--- a/index.html
+++ b/index.html
@@ -7,82 +7,79 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Header Section -->
-    <header>
+<!-- Header Section -->
+<header>
+    <nav>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#honors">Achievers</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#events" class="highlighted">Events</a></li>
+        </ul>
+    </nav>
+</header>
+
+<!-- Hero Section -->
+<main>
+    <div class="hero" style="background-image: url('homebackground.jpg');">
         <div class="logo">
             <img src="Logo.png" alt="Logo">
         </div>
-        <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#honors">Achievers</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#events" class="highlighted">Events</a></li>
-            </ul>
-        </nav>
-    </header>
+        <p> " Together We Turn Struggles Into Strength "</p>
+        <div class="buttons">
+            <a href="join.html" class="btn">Join</a>
+            <a href="donates.html" class="btn">Donate</a>
+        </div>
+    </div>
 
-    <!-- Hero Section -->
-    <main>
-        <div class="hero" style="background-image: url('homebackground.jpg');">
-            <h1>Together</h1>
-            <p>we turn struggles into strength</p>
-            <div class="buttons">
-                <a href="join.html" class="btn">Join</a>
-                <a href="donates.html" class="btn">Donate</a>
+    <!-- About Us Section -->
+    <section class="about-us" id ="home">
+        <h2>About Us</h2>
+        <p>Janmamithra Trust, established in 2015, inspires youth to share and care for society. With 250+ volunteers in Bengaluru, it has organized 200+ events, including child sponsorships, school adoptions, and monthly meals for the needy. The self-funded Trust now seeks volunteers to help secure organized donations.</p>
+    </section>
+
+    <!-- Vision and Mission Section -->
+    <section class="vision-mission" >
+        <div class="vision">
+            <div class="image-container">
+                <img src="vision.jpg" alt="Vision">
+                <div class="overlay">
+                    <h2>Our Vision</h2>
+                    <p>To have a world where happiness thrives!</p>
+                </div>
             </div>
         </div>
-
-        <!-- About Us Section -->
-        <section class="about-us" id ="home">
-            <h2>About Us</h2>
-            <p>Janmamithra Trust, established in 2015, inspires youth to share and care for society. With 250+ volunteers in Bengaluru, it has organized 200+ events, including child sponsorships, school adoptions, and monthly meals for the needy. The self-funded Trust now seeks volunteers to help secure organized donations.</p>
-        </section>
-
-        <!-- Vision and Mission Section -->
-        <section class="vision-mission" >
-            <div class="vision">
-                <div class="image-container">
-                    <img src="vision.jpg" alt="Vision">
-                    <div class="overlay">
-                        <h2>Our Vision</h2>
-                        <p>To have a world where happiness thrives!</p>
-                    </div>
+        <div class="mission">
+            <div class="image-container">
+                <img src="mission.jpg" alt="Mission">
+                <div class="overlay">
+                    <h2>Our Mission</h2>
+                    <p>Being constant support to help build a self-reliant community, through selfless contribution and participation by youth, who desire social welfare.</p>
                 </div>
             </div>
-            <div class="mission">
-                <div class="image-container">
-                    <img src="mission.jpg" alt="Mission">
-                    <div class="overlay">
-                        <h2>Our Mission</h2>
-                        <p>Being constant support to help build a self-reliant community, through selfless contribution and participation by youth, who desire social welfare.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- Contact Section -->
-<section class="contact-info" id="contact">
-    <div>
-        <h2>Contact Us</h2>
-        <p>📞 Mobile: 9611047143</p>
-        <p>✉️ Email: janmamithra@gmail.com</p>
-        <p>📍 Address: Nagarbhavi, Bangalore</p>
-    </div>
-</section>
-
-    <!-- Social Media Section -->
-    <section class="social-media">
-        <h2>Explore</h2>
-        <div class="social-icons">
-            <a href="https://www.instagram.com/janmamithra_trust_regd/" target="_blank" class="icon instagram"><img src="instagram.png" alt=Instagram></a>
-            <a href="https://x.com/intent/post?text=Home+-+https%3A%2F%2Fjanmamithra.org%2F+" target="_blank" class="icon twitter"><img src="twitter.png" alt=Twitter></a>
-            <a href="https://www.facebook.com/share.php?u=https://janmamithra.org/" target="_blank" class="icon facebook"><img src="facebook.png" alt=Facebook></a>
-            <a href="https://www.pinterest.com/pin/create/button/?url=https://janmamithra.org/&media=&description=" target="_blank" class="icon pinterest"><img src="pinterest.png" alt=Pinterest></a>
-            <a href="https://www.youtube.com/channel/UC_cz7USjfaLgRp7EZA2DaXw" target="_blank" class="icon youtube"><img src="youtube.png" alt=Youtube></a>
         </div>
     </section>
-    </main>
+    <!-- Contact Section -->
+<section class="contact-info" id="contact">
+    <h2>Contact Us</h2>
+    <div class="contact-links">
+        <p>📞 Mobile :  <a href="tel:9611047143">9611047143</a></p>
+        <p>✉ Mail :  <a href="mailto:janmamithra@gmail.com">janmamithra@gmail.com</a></p>
+        <p>📍Address :  <a href="https://www.google.com/maps?q=Nagarbhavi,+Bangalore" target="_blank">Nagarbhavi, Bangalore</a></p>
+    </div>
+</section>
+<!-- Social Media Section -->
+<section class="social-media">
+    <h2>Explore</h2>
+    <div class="social-icons">
+        <a href="https://www.instagram.com/janmamithra_trust_regd/" target="_blank" class="icon instagram"><img src="instagram.png" alt=Instagram></a>
+        <a href="https://x.com/intent/post?text=Home+-+https%3A%2F%2Fjanmamithra.org%2F+" target="_blank" class="icon twitter"><img src="twitter.png" alt=Twitter></a>
+        <a href="https://www.facebook.com/share.php?u=https://janmamithra.org/" target="_blank" class="icon facebook"><img src="facebook.png" alt=Facebook></a>
+        <a href="https://www.pinterest.com/pin/create/button/?url=https://janmamithra.org/&media=&description=" target="_blank" class="icon pinterest"><img src="pinterest.png" alt=Pinterest></a>
+        <a href="https://www.youtube.com/channel/UC_cz7USjfaLgRp7EZA2DaXw" target="_blank" class="icon youtube"><img src="youtube.png" alt=Youtube></a>
+    </div>
+</section>
+</main>
+<script src="script.js"></script>
 </body>
 </html>
