--- a/donate.html
+++ b/donate.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donate</title>
     <link rel="stylesheet" href="donate_styles.css">
+    
 </head>
 <body>
 
@@ -17,6 +18,7 @@
                 </div>
                 <input type="email" name="email" placeholder="Email" required>
                 <button type="submit">Submit</button>
+                <a href="index.html" class="back-button">Go Back to Home</a>
             </form>
         </div>
         
