--- a/index.html
+++ b/index.html
@@ -3,14 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Janmamithra Trust, inspiring youth to contribute to society since 2015. Join us in building a self-reliant community.">
-    <meta name="keywords" content="Janmamithra, Trust, Community, Volunteer, Donate, Social Welfare, Bangalore">
-    <meta name="author" content="Janmamithra Trust">
     <title>Janmamithra</title>
     <link rel="stylesheet" href="styles.css">
+    
 </head>
 <body>
-<!-- Header Section -->
+   <!-- Header Section -->
 <header>
     <nav>
         <ul>
@@ -32,7 +30,7 @@
     <p>"Together We Turn Struggles Into Strength"</p>
     <div class="buttons">
         <a href="join.html" class="btn">Join</a>
-        <a href="donates.html" class="btn">Donate</a>
+        <a href="donate.html" class="btn">Donate</a>
     </div>
 </section>
 
@@ -64,45 +62,29 @@
             </div>
         </div>
     </section>
-
-    <!-- Contact Section -->
-    <section class="contact-info" id="contact">
-        <h2>Contact Us</h2>
-        <div class="contact-links">
-            <p>📞 Mobile: <a href="tel:9611047143">9611047143</a></p>
-            <p>✉ Mail: <a href="mailto:janmamithra@gmail.com">janmamithra@gmail.com</a></p>
-            <p>📍 Address: <a href="https://www.google.com/maps?q=Nagarbhavi,+Bangalore" target="_blank">Nagarbhavi, Bangalore</a></p>
-        </div>
-    </section>
-
+        <!-- Contact Section -->
+        <section class="contact-info" id="contact">
+            <h2>Contact Us</h2>
+            <div class="contact-links">
+                <p>📞 Mobile: <a href="tel:9611047143">9611047143</a></p>
+                <p>✉ Mail: <a href="mailto:janmamithra@gmail.com">janmamithra@gmail.com</a></p>
+                <p>📍 Address: <a href="https://www.google.com/maps?q=Nagarbhavi,+Bangalore" target="_blank">Nagarbhavi, Bangalore</a></p>
+            </div>
+            <section class="social-media">
+                <div class="social-icons">
+                    <a href="https://www.instagram.com/janmamithra_trust_regd/" target="_blank" class="icon instagram"><img src="instagram.png" alt=Instagram></a>
+                    <a href="https://x.com/intent/post?text=Home+-+https%3A%2F%2Fjanmamithra.org%2F+" target="_blank" class="icon twitter"><img src="twitter.png" alt=Twitter></a>
+                    <a href="https://www.facebook.com/share.php?u=https://janmamithra.org/" target="_blank" class="icon facebook"><img src="facebook.png" alt=Facebook></a>
+                    <a href="https://www.pinterest.com/pin/create/button/?url=https://janmamithra.org/&media=&description=" target="_blank" class="icon pinterest"><img src="pinterest.png" alt=Pinterest></a>
+                    <a href="https://www.youtube.com/channel/UC_cz7USjfaLgRp7EZA2DaXw" target="_blank" class="icon youtube"><img src="youtube.png" alt=Youtube></a>
+                </div>
+            </section>
+        </section>
     <!-- Social Media Section -->
-    <section class="social-media">
-        <h2>Explore</h2>
-        <div class="social-icons">
-            <a href="https://www.instagram.com/janmamithra_trust_regd/" target="_blank" class="icon instagram">
-                <img src="instagram.png" alt="Instagram Icon">
-            </a>
-            <a href="https://x.com/intent/post?text=Home+-+https%3A%2F%2Fjanmamithra.org%2F+" target="_blank" class="icon twitter">
-                <img src="twitter.png" alt="Twitter Icon">
-            </a>
-            <a href="https://www.facebook.com/share.php?u=https://janmamithra.org/" target="_blank" class="icon facebook">
-                <img src="facebook.png" alt="Facebook Icon">
-            </a>
-            <a href="https://www.pinterest.com/pin/create/button/?url=https://janmamithra.org/&media=&description=" target="_blank" class="icon pinterest">
-                <img src="pinterest.png" alt="Pinterest Icon">
-            </a>
-            <a href="https://www.youtube.com/channel/UC_cz7USjfaLgRp7EZA2DaXw" target="_blank" class="icon youtube">
-                <img src="youtube.png" alt="YouTube Icon">
-            </a>
-        </div>
-    </section>
-</main>
-
-<!-- Footer Section -->
-<footer>
-    <p>&copy; 2024 Janmamithra Trust. All Rights Reserved.</p>
-</footer>
-
-<script src="script.js"></script>
+    
+    </main>
+    <footer>
+        <p>&copy; 2024 Janmamithra Trust. All Rights Reserved.</p>
+    </footer>
 </body>
 </html>
