--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
 </head>
 <body>
    <!-- Header Section -->
-<header>
+   <header>
     <nav>
         <ul>
             <li><a href="#home">Home</a></li>
             <li><a href="#honors">Achievers</a></li>
-            <li><a href="#projects">Projects</a></li>
+            <li><a href="projects.html">Projects</a></li>
             <li><a href="#events" class="highlighted">Events</a></li>
         </ul>
     </nav>
 </header>
+
 
 <!-- Main Content -->
 <main>
