--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@
             </a>
         </div>
         <div class="project education">
-            <a href="education.html" target="_blank">
+            <a href="educationcare.html" target="_blank">
                 <img src="education.jpg" alt="Education Project">
                 <div class="bottom-text">Education</div>
             </a>
@@ -54,12 +54,20 @@
                 <div class="bottom-text">Health and Wellness</div>
             </a>
         </div>
-        <div class="project health">
+        <div class="project Career">
             <a href="career.html" target="_blank">
                 <img src="career.jpg" alt="Career Wing">
                 <div class="bottom-text">Career Wing</div>
             </a>
         </div>
+        <div class="project Soverign">
+            <a href="soverignsupport.html" target="_blank">
+                <img src="soverignsupport.jpg" alt="Career Wing">
+                <div class="bottom-text">Soverign Support</div>
+            </a>
+        </div>
+
+
     
     </div>
     </div>    
