--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,11 @@
     <title>Projects</title>
 </head>
 <body>
+
+    <a href="index.html">
+        <img src="Logo.png" alt="Logo" class="logo">
+    </a>
+
     <div class="pro">
         <h1>OUR PROJECTS</h1>
     </div>
@@ -38,7 +43,7 @@
         </div>
         <div class="project disabled">
             <a href="disability.html" target="_blank">
-                <img src="disable.jpg" alt="Disability Assistance Project">
+                <img src="disable2.jpg" alt="Disability Assistance Project">
                 <div class="bottom-text">Disability Assistance</div>
             </a>
         </div>
