--- a/disaster.html
+++ b/disaster.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="elderly.css">
 </head>
 <body>
+    <a href="projects.html">
+        <img src="Logo.png" alt="Logo" class="logo">
+    </a>
+
     <div class="container">
         <div class="header">
             <h1>Our Projects</h1>
@@ -14,7 +18,7 @@
         <div class="content">
             <!-- First project -->
             <div class="project">
-                <h2>Food Packets Distribution Drive                </h2>
+                <h2>Food Packets Distribution Drive</h2>
                 <div class="project-content">
                     <img src="disastercare1.jpg" alt="Elderly Care">
                     <p>
@@ -22,17 +26,28 @@
                     </p>
                 </div>
             </div>
+
+            <!-- Second project -->
             <div class="project">
-                <h2>Distribution of food packets
-                </h2>
+                <h2>Distribution of Food Packets</h2>
                 <div class="project-content">
                     <img src="disastercare2.jpg" alt="Elderly Care">
                     <p>
-                        The distribution of food packets is a thoughtful initiative aimed at addressing hunger and providing essential nourishment to those in need. It involves the preparation and delivery of wholesome meals to underserved communities, ensuring that individuals and families have access to basic sustenance. It highlights the importance of sharing resources and supporting those who face daily struggles, creating a positive impact and promoting social well-being.
-                        </p>
+                        The distribution of food packets is a thoughtful initiative aimed at addressing hunger and providing essential nourishment to those in need. It involves the preparation and delivery of wholesome meals to underserved communities, ensuring that individuals and families have access to basic sustenance. It highlights the importance of sharing resources and supporting those who face daily struggles, creating a positive impact and promoting social well-being.
+                    </p>
                 </div>
             </div>
-            
+
+            <!-- Third project -->
+            <div class="project">
+                <h2>Support for Balloon Vendors</h2>
+                <div class="project-content">
+                    <img src="disastercare3.jpg" alt="Elderly Care">
+                    <p>
+                        The event involved distributing clothes and food packets to balloon vendors, offering support to those in need. Volunteers came together to provide essential items, ensuring the vendors had a little more comfort and nourishment. The distribution not only addressed their immediate needs but also fostered a sense of compassion and unity within the community. It was a small gesture aimed at making a positive impact and bringing some joy to the lives of those who work hard every day.
+                    </p>
+                </div>
+            </div>
         </div>
     </div>
 </body>
