--- a/disability.html
+++ b/disability.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="elderly.css">
 </head>
 <body>
+    <a href="projects.html">
+        <img src="Logo.png" alt="Logo" class="logo">
+    </a>
     <div class="container">
         <div class="header">
             <h1>Our Projects</h1>
@@ -14,14 +17,69 @@
         <div class="content">
             <!-- First project -->
             <div class="project">
-                <h2></h2>
+                <h2>Shastri School</h2>
                 <div class="project-content">
-                    <img src="disable.jpg" alt="Disability Care">
+                    <img src="disable1.jpg" alt="Disability Care">
                     <p>
-                         </p>
+                        On 25th August 2019, we visited Shastri School for Deaf and Dumb Children, a residential school with around 20 kids. We had a wonderful time interacting with these talented children, who impressed us with their drawing and painting skills. Lunch was sponsored by Janmamithra, followed by fun games that the kids thoroughly enjoyed. The day concluded with a cake-cutting ceremony and snacks distribution, creating cherished memories for all.
+                    </p>
                 </div>
             </div>
-            
+
+            <!-- Second project -->
+            <div class="project">
+                <h2>Aruna Chetana Manovikasa Kendra</h2>
+                <div class="project-content">
+                    <img src="disable2.jpg" alt="Disability Care">
+                    <p>  
+                        The 30th Annual Sports Meet, jointly organized by Janmamithra and Aruna Chethana Manovikasa Kendra, was a truly memorable and joyous occasion. The event was marked by the enthusiastic participation of the children, who showcased their energy and talent, becoming the shining stars of the day. Our dedicated volunteers played a crucial role in organizing and managing the activities, ensuring the event's success. The time spent with the kids created cherished memories and strengthened our commitment to their well-being. Parents shared heartfelt feedback, appreciating our efforts, which served as a great motivation for our team to plan more impactful events in the future. We extend our heartfelt gratitude to everyone who contributed their valuable time and energy to make this event special.
+                    </p>
+                </div>
+            </div>
+
+            <!-- Third project -->
+            <div class="project">
+                <h2>Premanjali Foundation visit</h2>
+                <div class="project-content">
+                    <img src="disable3.jpg" alt="Disability Care">
+                    <p>  
+                        On 27th April 2019, Janmamithra organized a Personality Development Program at Premanjali Foundation for visually impaired students. The event aimed at enhancing the personal and social skills of the students, helping them build confidence and improve communication abilities. Through interactive activities and guidance, the students had the opportunity to express themselves and develop essential life skills. The program was a resounding success, and we are grateful to all the volunteers and supporters who made this event possible. Their contribution played a key role in providing a positive and empowering experience for the students. We look forward to continuing such impactful initiatives in the future.
+                    </p>
+                </div>
+            </div>
+
+            <!-- Fourth project -->
+            <div class="project">
+                <h2>Mathrushree Manovikasa Kendra</h2>
+                <div class="project-content">
+                    <img src="disable4.jpg" alt="Disability Care">
+                    <p>  
+                        On 10th February 2019, Janmamithra organized a heartfelt event at Mathrushree Manovikasa Kendra, where we recognized the importance of using our abilities to support those who are less fortunate. While many of us are blessed with the five senses and the ability to express our emotions, there are others who face challenges in doing so. The event was a reminder that we can share our gifts by helping those in need explore ways to experience happiness and communicate their feelings. The time spent with these individuals reinforced the power of compassion and how we can make a meaningful difference in their lives. It was truly a day of reflection, learning, and giving.
+                    </p>
+                </div>
+            </div>
+
+            <!-- Fifth project -->
+            <div class="project">
+                <h2>Deepa Academy for Disable</h2>
+                <div class="project-content">
+                    <img src="disable5.jpg" alt="Disability Care">
+                    <p> 
+                        The event organized by Janmamithra at Deepa Academy for Disabled on 26th January 2019, to celebrate the 70th Republic Day, was truly memorable. Spending time with the children of the institute was an incredibly rewarding experience, as their enthusiasm and joy were contagious. Many volunteers joined hands to make the event a success, contributing their valuable time and effort to ensure everything ran smoothly. The children actively participated in the celebrations, becoming the true stars of the day. Their energy and excitement inspired our team and motivated us to continue planning impactful events in the future. We are grateful to everyone who supported the event and helped make it a special occasion for all involved.
+                    </p>
+                </div>
+            </div>
+
+            <!-- Sixth project -->
+            <div class="project">
+                <h2>Sahana Charitable trust</h2>
+                <div class="project-content">
+                    <img src="disable6.jpg" alt="Disability Care">
+                    <p> 
+                        We visited Sahana Charitable Trust with the aim of supporting and building confidence among visually challenged children. During our visit, we engaged with the children through various activities designed to empower them and foster a sense of self-belief. Our team worked closely with the children, offering encouragement and tools to help them overcome their challenges. It was a heartwarming experience that highlighted the importance of inclusivity and the potential of every child, regardless of their circumstances. This initiative aimed to create a supportive environment where the children felt valued and capable.
+                    </p>
+                </div>
+            </div>
         </div>
     </div>
 </body>
