--- a/educationcare.html
+++ b/educationcare.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="elderly.css">
 </head>
 <body>
+    <a href="projects.html">
+        <img src="Logo.png" alt="Logo" class="logo">
+    </a>
     <div class="container">
         <div class="header">
             <h1>Our Projects</h1>
@@ -14,11 +17,24 @@
         <div class="content">
             <!-- First project -->
             <div class="project">
-                <h2></h2>
+                <h2>School adoption
+                </h2>
                 <div class="project-content">
                     <img src="education.jpg" alt="education Care">
                     <p>
-                         </p>
+                        JANMAMITHRA has taken the significant initiative of adopting schools, supported by our passionate volunteers, to ensure holistic development and meet their essential needs. Adopting a school means addressing its basic requirements, contributing to various school programs, and organizing impactful events. As part of this initiative, we have provided key resources, including a book rack, educational charts (e.g., alphabet, digestive system, Jnanapeeta awardees), and Kolata sets. Infrastructure improvements include fans, Jhamakhana mats, and compound wall paintings featuring educational designs. We have also contributed indoor game sets like chess and carrom, a used computer in good condition, and a whiteboard with markers. Additionally, we supplied stationery items like pencils, pens, notebooks, crayons, and sketch pens. This initiative reflects our commitment to empowering students with the resources and environment they need for a better education and brighter future.
+
+                 </p>
+                </div>
+            </div>
+
+            <div class="project">
+                <h2>Sharadha Pooja                </h2>
+                <div class="project-content">
+                    <img src="education2.jpg" alt="education Care">
+                    <p>
+                        The event of Janmamithra, held on the occasion of Sri Sharadha Pooja at Nachiketha Manovikas Kendra on 14th October 2018, was a highly successful and impactful celebration. The gathering focused on promoting the well-being and empowerment of individuals across various sectors. It provided a platform for addressing the unique needs of vulnerable groups, highlighting the importance of care and support in different life stages. This event was instrumental in fostering community spirit and awareness, aligning with goals such as education, health, and wellness, while contributing to the holistic development of the individuals involved. The initiative demonstrated a strong commitment to care and support in the local community.
+                    </p>
                 </div>
             </div>
             
