--- a/career.html
+++ b/career.html
@@ -59,23 +59,19 @@
                 <div class="bottom-text">Health and Wellness</div>
             </a>
         </div>
-        <div class="project Career">
+        <div class="project career">
             <a href="career.html" target="_blank">
                 <img src="career.jpg" alt="Career Wing">
                 <div class="bottom-text">Career Wing</div>
             </a>
         </div>
-        <div class="project Soverign">
+        <div class="project sovereign">
             <a href="soverignsupport.html" target="_blank">
-                <img src="soverignsupport.jpg" alt="Career Wing">
-                <div class="bottom-text">Soverign Support</div>
+                <img src="soverignsupport.jpg" alt="Sovereign Support">
+                <div class="bottom-text">Sovereign Support</div>
             </a>
         </div>
-
-
-    
     </div>
-    </div>    
-    
+
 </body>
 </html>
