--- a/join.html
+++ b/join.html
@@ -3,54 +3,79 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Join</title>
-    <link rel="stylesheet" href="join.css">
+    <link rel="stylesheet" href="projects.css">
+    <title>Projects</title>
 </head>
 <body>
-    <div class="header">
-        <h1>Welcome to Janmamithra Trust</h1>
-        <p>"Be the change—unite to inspire hope, create impact, and shape a better tomorrow."</p>
+
+    <a href="index.html">
+        <img src="Logo.png" alt="Logo" class="logo">
+    </a>
+
+    <div class="pro">
+        <h1>OUR PROJECTS</h1>
     </div>
-    <form>
-        <p>Join us in creating a better future by filling this form!</p>
-        <br>
-        <div class="form-group">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" required>
+
+    <div class="images">
+        <div class="project elderlycare">
+            <a href="elderlycare.html" target="_blank">
+                <img src="elderly.jpg" alt="Elderly Care Project">
+                <div class="bottom-text">Elderly Care</div>
+            </a>
         </div>
-        <div class="form-group">
-            <label for="mobile">Mobile:</label>
-            <input type="tel" id="mobile" name="mobile" pattern="[0-9]{10}" required>
+        <div class="project child">
+            <a href="childcare.html" target="_blank">
+                <img src="child.jpg" alt="Child Care Project">
+                <div class="bottom-text">Child Care</div>
+            </a>
         </div>
-        <div class="form-group">
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
+        <div class="project education">
+            <a href="educationcare.html" target="_blank">
+                <img src="education.jpg" alt="Education Project">
+                <div class="bottom-text">Education</div>
+            </a>
         </div>
-        <div class="form-group">
-            <label for="address">Address:</label>
-            <textarea id="address" name="address" rows="4" required></textarea>
+        <div class="project disaster">
+            <a href="disaster.html" target="_blank">
+                <img src="disaster.jpg" alt="Disaster Relief Project">
+                <div class="bottom-text">Disaster Relief</div>
+            </a>
         </div>
-        <div class="form-group">
-            <label for="blood_group">Blood Group:</label>
-            <input type="text" id="blood_group" name="blood_group" required>
+        <div class="project disabled">
+            <a href="disability.html" target="_blank">
+                <img src="disable2.jpg" alt="Disability Assistance Project">
+                <div class="bottom-text">Disability Assistance</div>
+            </a>
         </div>
-        <div class="form-group">
-            <label for="date_of_birth">Date of Birth:</label>
-            <input type="date" id="date_of_birth" name="date_of_birth" required>
+        <div class="project environment">
+            <a href="environment.html" target="_blank">
+                <img src="environment.jpg" alt="Environmental Care Project">
+                <div class="bottom-text">Environmental Care</div>
+            </a>
         </div>
-        <div class="form-group">
-            <label for="profession">Profession:</label>
-            <input type="text" id="profession" name="profession" required>
+        <div class="project health">
+            <a href="health.html" target="_blank">
+                <img src="health.jpg" alt="Health and Wellness Project">
+                <div class="bottom-text">Health and Wellness</div>
+            </a>
         </div>
-        <div class="form-group">
-            <label for="passion_hobbies">Passion/Hobbies:</label>
-            <input type="text" id="passion_hobbies" name="passion_hobbies" required>
+        <div class="project Career">
+            <a href="career.html" target="_blank">
+                <img src="career.jpg" alt="Career Wing">
+                <div class="bottom-text">Career Wing</div>
+            </a>
         </div>
-        <div class="form-group">
-            <label for="image-upload">Upload Your Photo:</label>
-            <input type="file" id="image-upload" name="image" accept="image/*" required>
+        <div class="project Soverign">
+            <a href="soverignsupport.html" target="_blank">
+                <img src="soverignsupport.jpg" alt="Career Wing">
+                <div class="bottom-text">Soverign Support</div>
+            </a>
         </div>
-        <button type="submit">Join</button>
-    </form>
+
+
+    
+    </div>
+    </div>    
+    
 </body>
 </html>
