--- a/career.html
+++ b/career.html
@@ -3,75 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="projects.css">
-    <title>Projects</title>
+    <title>Career Care</title>
+    <link rel="stylesheet" href="elderly.css">
 </head>
 <body>
-
-    <a href="index.html">
+    <a href="projects.html">
         <img src="Logo.png" alt="Logo" class="logo">
     </a>
-
-    <div class="pro">
-        <h1>OUR PROJECTS</h1>
-    </div>
-
-    <div class="images">
-        <div class="project elderlycare">
-            <a href="elderlycare.html" target="_blank">
-                <img src="elderly.jpg" alt="Elderly Care Project">
-                <div class="bottom-text">Elderly Care</div>
-            </a>
+    <div class="container">
+        <div class="header">
+            <h1>Our Projects</h1>
         </div>
-        <div class="project child">
-            <a href="childcare.html" target="_blank">
-                <img src="child.jpg" alt="Child Care Project">
-                <div class="bottom-text">Child Care</div>
-            </a>
-        </div>
-        <div class="project education">
-            <a href="educationcare.html" target="_blank">
-                <img src="education.jpg" alt="Education Project">
-                <div class="bottom-text">Education</div>
-            </a>
-        </div>
-        <div class="project disaster">
-            <a href="disaster.html" target="_blank">
-                <img src="disaster.jpg" alt="Disaster Relief Project">
-                <div class="bottom-text">Disaster Relief</div>
-            </a>
-        </div>
-        <div class="project disabled">
-            <a href="disability.html" target="_blank">
-                <img src="disable2.jpg" alt="Disability Assistance Project">
-                <div class="bottom-text">Disability Assistance</div>
-            </a>
-        </div>
-        <div class="project environment">
-            <a href="environment.html" target="_blank">
-                <img src="environment.jpg" alt="Environmental Care Project">
-                <div class="bottom-text">Environmental Care</div>
-            </a>
-        </div>
-        <div class="project health">
-            <a href="health.html" target="_blank">
-                <img src="health.jpg" alt="Health and Wellness Project">
-                <div class="bottom-text">Health and Wellness</div>
-            </a>
-        </div>
-        <div class="project career">
-            <a href="career.html" target="_blank">
-                <img src="career.jpg" alt="Career Wing">
-                <div class="bottom-text">Career Wing</div>
-            </a>
-        </div>
-        <div class="project sovereign">
-            <a href="soverignsupport.html" target="_blank">
-                <img src="soverignsupport.jpg" alt="Sovereign Support">
-                <div class="bottom-text">Sovereign Support</div>
-            </a>
+        <div class="content">
+            <!-- First project -->
+            <div class="project">
+                <h2></h2>
+                <div class="project-content">
+                    <img src="career.jpg" alt="Career Care">
+                    <p>
+                        
+                    </p>
+                </div>
+            </div>
+            
         </div>
     </div>
-
 </body>
 </html>
